--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/css/site.css">
     <!-- Link HEADlink.js her under -->
+    <script src="assets\js\HEADlink.js" defer></script>
 
 </head>
 
@@ -34,8 +35,11 @@ alert('hej fra et script tag');
 
     <!-- Skriv javascript direkte i et script tag herunder -->
 
+    <script>alert('hej fra et script tag');</script>
+
 
     <!-- Link HTMLlink.js her under -->
+    <script src="assets\js\HTMLlink.js"></script>
 
 
 </body>
